[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/resource.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ore_block.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/drill.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 7 )

[node name="OreBlock" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="PlayerCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheck"]
modulate = Color( 0.188235, 0.968627, 0.027451, 1 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="MineTimer" type="Timer" parent="."]
one_shot = true

[node name="DrillSprite" type="Sprite" parent="."]
visible = false
position = Vector2( -5, -5 )
scale = Vector2( 0.3125, 0.3125 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="PlayerCheck" to="." method="_on_PlayerCheck_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="MineTimer" to="." method="_on_MineTimer_timeout"]
